Qlik Chart overflow hidden issue

--- a/src/sass/components/_dash.sass
+++ b/src/sass/components/_dash.sass
@@ -152,7 +152,6 @@
     transition: .25s $ease
     height: auto
     position: relative
-    overflow: hidden
 
   &__toggler
     cursor: pointer
